add functions to the overlayWindow

--- a/src/landing.html
+++ b/src/landing.html
@@ -64,7 +64,7 @@
                         <p class="status-description">Run the steam</p>
                         <span class="status-text-autoFix" id="autoFix">auto fix</span>
                     </div>
-                    <button id="startTheGame">Start the game</button>
+                    <button id="startTheGameBtn">Start the game</button>
                 </div>
                 <div class="update-changelog">
                     <p class="header">Update <span id="AppVersion">1.0.0</span> change log</p>
