--- a/src/overlay.html
+++ b/src/overlay.html
@@ -12,9 +12,10 @@
     <title>Overlay</title>
 </head>
 <body>
-    
-
-
+    <h1 class="h1-test">Hello overlay !</h1>
+    <div>
+        hello
+    </div>
     <script src="overlay.js"></script>
 </body>
 </html>
