Fix a bug that opens several overlays

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -12,10 +12,16 @@
     <title>Overlay</title>
 </head>
 <body>
-    <h1 class="h1-test">Hello overlay !</h1>
+
+    <!-- content menu -->
+    <!-- we need a button for opening the ArtyCalc -->
+    <!-- We need a button to close the Calc and back to button -->
+
     <div>
-        hello
+        h1llo
     </div>
+
+
     <script src="overlay.js"></script>
 </body>
 </html>
