add jquery animation for overlay form opening

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -17,11 +17,16 @@
     <!-- we need a button for opening the ArtyCalc -->
     <!-- We need a button to close the Calc and back to button -->
 
-    <div>
-        h1llo
+    <div id="overlay_content_box">
+        <img src="" class="overlay_image">
+        <div id="overlay_content">
+            <div class="overlay_minimize_btn">
+                <span>&times;</span>
+            </div>
+        </div>
     </div>
 
-
     <script src="overlay.js"></script>
+    <script src="jquery.bez.min.js"></script>
 </body>
 </html>
