add wallpaper background to overlay page

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -23,6 +23,13 @@
             <div class="overlay_minimize_btn">
                 <span>&times;</span>
             </div>
+            <div class="overlay_wallpaper">
+                <img src="../assets/images/OverlayWallpaper.png" />
+            </div>
+            <div class="artilleryType_selection">
+                <p class="overlay_title">Select Artillery Type</p>
+                <span class="overlay_subtitle dark-gray-color" id="Artillery_Type">Howitzer selected</span>
+            </div>
         </div>
     </div>
 
