add Howi type section

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -26,9 +26,28 @@
             <div class="overlay_wallpaper">
                 <img src="../assets/images/OverlayWallpaper.png" />
             </div>
-            <div class="artilleryType_selection">
+            <div class="artilleryType_selection row-display-flex">
                 <p class="overlay_title">Select Artillery Type</p>
                 <span class="overlay_subtitle dark-gray-color" id="Artillery_Type">Howitzer selected</span>
+                <div class="Artillery_Type">
+                    <label>
+                        <input type="radio" name="arty_type" value="Fa">
+                        <img class="arty_type" id="Fa" src="">
+                    </label>
+                    <label>
+                        <input type="radio" name="arty_type" value="Mor">
+                        <img class="arty_type" id="Mor" src="">
+                    </label>
+                    <label>
+                        <input type="radio" name="arty_type" value="Howi">
+                        <img class="arty_type" id="Howi" src="">
+                    </label>
+                    <label>
+                        <input type="radio" name="arty_type" value="Gb">
+                        <img class="arty_type" id="Gb" src="">
+                    </label>
+                </div>
+                </div>
             </div>
         </div>
     </div>
