--- a/src/overlay.html
+++ b/src/overlay.html
@@ -17,40 +17,18 @@
     <!-- we need a button for opening the ArtyCalc -->
     <!-- We need a button to close the Calc and back to button -->
 
+
     <div id="overlay_content_box">
-        <img src="" class="overlay_image">
-        <div id="overlay_content">
-            <div class="overlay_minimize_btn">
-                <span>&times;</span>
-            </div>
-            <div class="overlay_wallpaper">
-                <img src="../assets/images/OverlayWallpaper.png" />
-            </div>
-            <div class="artilleryType_selection row-display-flex">
-                <p class="overlay_title">Select Artillery Type</p>
-                <span class="overlay_subtitle dark-gray-color" id="Artillery_Type">Howitzer selected</span>
-                <div class="Artillery_Type">
-                    <label>
-                        <input type="radio" name="arty_type" value="Fa">
-                        <img class="arty_type" id="Fa" src="">
-                    </label>
-                    <label>
-                        <input type="radio" name="arty_type" value="Mor">
-                        <img class="arty_type" id="Mor" src="">
-                    </label>
-                    <label>
-                        <input type="radio" name="arty_type" value="Howi">
-                        <img class="arty_type" id="Howi" src="">
-                    </label>
-                    <label>
-                        <input type="radio" name="arty_type" value="Gb">
-                        <img class="arty_type" id="Gb" src="">
-                    </label>
-                </div>
-                </div>
-            </div>
-        </div>
+        <input type="radio" name="gender" value="male"> Male<br>
+        <input type="radio" name="gender" value="female"> Female<br>
+        <input type="radio" name="gender" value="other"> Other
     </div>
+
+
+
+
+                    
+
 
     <script src="overlay.js"></script>
     <script src="jquery.bez.min.js"></script>
