add container ( circle )

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -12,8 +12,11 @@
 </head>
 <body>
 
-   
-
+    <div class="overlay_container">
+        <div class="overlay_max_btn">
+            <p>&#187;</p>
+        </div>
+    </div>
 
     <script src="overlay.js"></script>
 </body>
