add overlay icon codes

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -16,6 +16,9 @@
         <div class="overlay_max_btn">
             <p>&#187;</p>
         </div>
+        <div class="overlay_arty_image">
+            <img src="../assets/i" />
+        </div>
     </div>
 
     <script src="overlay.js"></script>
