--- a/src/overlay.html
+++ b/src/overlay.html
@@ -14,10 +14,10 @@
 
     <div class="overlay_container">
         <div class="overlay_max_btn">
-            <p>&#187;</p>
+            <p>&times;</p>
         </div>
         <div class="overlay_arty_image">
-            <img src="../assets/i" />
+            <img id="openOverlay" src="../assets/images/Arty.svg" />
         </div>
     </div>
 
