add animation to overlay form

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="overlay_container">
+    <div class="overlay_container" id="overlayBox">
         <div class="overlay_max_btn">
             <p>&times;</p>
         </div>
