overlay open animation

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -16,9 +16,12 @@
         <div class="overlay_max_btn">
             <p>&times;</p>
         </div>
-        <div class="overlay_arty_image">
-            <img id="openOverlay" src="../assets/images/Arty.svg" />
+        <div class="overlay_arty_image" id="openOverlay" >
+            <img src="../assets/images/Arty.svg" />
         </div>
+            <div id="overlay_content">
+                <h1>Hello world</h1>
+            </div>
     </div>
 
     <script src="overlay.js"></script>
