add z-index 99 for btn

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -20,7 +20,14 @@
             <img src="../assets/images/Arty.svg" />
         </div>
             <div id="overlay_content">
-                <h1>Hello world</h1>
+                <div class="overlay_content__wallpaper">
+                    <img src="../assets/images/OverlayWallpaper.png" />
+                </div>
+                <div class="overlay_content__title">
+                    <p class="overlay__primaryTitle"></p>
+                    <p class="overlay__secondTitle"></p>
+                </div>
+
             </div>
     </div>
 
