add title section

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -23,11 +23,13 @@
                 <div class="overlay_content__wallpaper">
                     <img src="../assets/images/OverlayWallpaper.png" />
                 </div>
-                <div class="overlay_content__title">
-                    <p class="overlay__primaryTitle"></p>
-                    <p class="overlay__secondTitle"></p>
+                <div class="overlay_form__content">
+                    <div class="overlay_content__title">
+                        <p class="overlay__primaryTitle">Select Artillery Type</p>
+                        <p class="overlay__secondTitle">Howitzer selected</p>
+                    </div>
                 </div>
-
+                
             </div>
     </div>
 
