add coordinate result section

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -55,12 +55,43 @@
                         </div>
                     </div>
                     <div class="hr"></div>
-                    <div class="overlay_content__title">
-                        <p class="overlay__primaryTitle">To Enemy Position</p>
+                    <div class="overlay_textboxes_content">
+                        <div class="overlay_content__title">
+                            <p class="overlay__primaryTitle">To Enemy Position</p>
+                        </div>
+                        <div class="overlay_textboxes">
+                            <input type="number" placeholder="Enemy Distance" />
+                            <input type="number" placeholder="Enemy Azimuth">
+                        </div>
                     </div>
-                    <div class="overlay_textboxes">
-                        <input type="number" placeholder="Enemy Distance"/>
-                        <input type="number" placeholder="Enemy Azimuth">
+                    <div class="overlay_textboxes_content">
+                        <div class="overlay_content__title">
+                            <p class="overlay__primaryTitle">To Enemy Position</p>
+                        </div>
+                        <div class="overlay_textboxes">
+                            <input type="number" placeholder="Enemy Distance" />
+                            <input type="number" placeholder="Enemy Azimuth">
+                        </div>
+                    </div>
+                    <div class="hr margin-top20"></div>
+                    <div class="result_coordinates">
+                        <div class="overlay_content__title">
+                            <p class="overlay__primaryTitle">Enemy Coordinates</p>
+                            <p class="overlay__secondTitle" style="color: #ff4848;">Howitzer selected</p>
+                        </div>
+                        <div class="result_coordinates__contents">
+                            <div class="coordinate_box">
+                                <p class="overlay__primaryTitle" style="color:#737373;font-weight: bold">DISTANCE</p>
+                                <p class="overlay__primaryNumber">124<span>m</span></p>
+                            </div>
+                            <div class="coordinate_box" style="margin-right: auto;">
+                                <p class="overlay__primaryTitle" style="color:#737373;font-weight: bold">AZIMUTH</p>
+                                <p class="overlay__primaryNumber">45<span>deg</span></p>
+                            </div>
+                            <div class="result_coordinates__copy">
+                                <img src="../assets/images/copy-content.svg" />
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
