--- a/src/overlay.html
+++ b/src/overlay.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="overlay_textboxes_content">
                         <div class="overlay_content__title">
-                            <p class="overlay__primaryTitle">To Enemy Position</p>
+                            <p class="overlay__primaryTitle">To Friendly Artillery</p>
                         </div>
                         <div class="overlay_textboxes">
                             <input type="number" placeholder="Enemy Distance" />
