change margin top of entire form after clicking on arty ico n

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -20,7 +20,7 @@
             <img src="../assets/images/Arty.svg" />
         </div>
             <div id="overlay_content" style="opacity: 0;">
-                <div class="overlay_content__wallpaper">
+                <div class="overlay_content__wallpaper display_none" id="overlay_wallpaper">
                     <img src="../assets/images/OverlayWallpaper.png" />
                 </div>
                 <div class="overlay_form__content">
