add minimize btn

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -14,7 +14,7 @@
 
     <div class="overlay_container" id="overlayBox">
         <div class="overlay_max_btn">
-            <p>&times;</p>
+            <p id="overlay_max_btn_content">&times;</p>
         </div>
         <div class="overlay_arty_image" id="openOverlay" >
             <img src="../assets/images/Arty.svg" />
