change text 'run steam' to 'run steam and start the game

--- a/src/landing.html
+++ b/src/landing.html
@@ -56,7 +56,7 @@
                         <div class="status-text-image">
                             <img src="../assets/images/error.svg" id="status-text-passed" />
                         </div>
-                        <p class="status-description">Run the steam</p>
+                        <p class="status-description">Run the steam and start the game</p>
                         <span class="status-text-autoFix" id="autoFix">auto fix</span>
                     </div>
                     <button id="startTheGameBtn">Start the game</button>
