change some texts

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -69,8 +69,8 @@
                             <p class="overlay__primaryTitle">To Friendly Artillery</p>
                         </div>
                         <div class="overlay_textboxes">
-                            <input type="number" placeholder="Enemy Distance" />
-                            <input type="number" placeholder="Enemy Azimuth">
+                            <input type="number" placeholder="Friendly Distance" />
+                            <input type="number" placeholder="Friendly Azimuth">
                         </div>
                     </div>
                     <div class="hr margin-top20"></div>
