fix small animation issues

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -97,7 +97,7 @@
                 
             </div>
     </div>
-
     <script src="overlay.js"></script>
+    <script src="overlay_animation.js"></script>
 </body>
 </html>
