--- a/src/overlay.html
+++ b/src/overlay.html
@@ -26,29 +26,29 @@
                 <div class="overlay_form__content">
                     <div class="overlay_content__title">
                         <p class="overlay__primaryTitle">Select Artillery Type</p>
-                        <p class="overlay__secondTitle">Howitzer selected</p>
+                        <p class="overlay__secondTitle" id="Arty_type_radio_subtitle">Nothing selected</p>
                     </div>
                     <div class="artillery_type_radio">
-                        <div class="type_single_radio">
-                            <input type="radio" id="Fieldartillery" name="arty_type" value="Fa">
+                        <div class="type_single_radio" >
+                            <input type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
                             <label for="Fieldartillery">
                                 <img src="../assets/images/Field_Artillery.png">
                             </label>
                         </div>
-                        <div class="type_single_radio">
-                            <input type="radio" id="Gunboat" name="arty_type" value="Gb">
+                        <div class="type_single_radio" >
+                            <input type="radio" id="Gunboat" name="arty_type" value="Gunboat">
                             <label for="Gunboat">
                                 <img src="../assets/images/Gunship.png">
                             </label>
                         </div>
-                        <div class="type_single_radio">
-                            <input type="radio" id="Howitzer" name="arty_type" value="Howi">
+                        <div class="type_single_radio" >
+                            <input type="radio" id="Howitzer" name="arty_type" value="Howitzer">
                             <label for="Howitzer">
                                 <img src="../assets/images/Howitzer_kit.png">
                             </label>
                         </div>
-                        <div class="type_single_radio">
-                            <input type="radio" id="Mortar" name="arty_type" value="Mor">
+                        <div class="type_single_radio" >
+                            <input type="radio" id="Mortar" name="arty_type" value="Mortar">
                             <label for="Mortar">
                                 <img src="../assets/images/Mortar.png">
                             </label>
