--- a/src/overlay.html
+++ b/src/overlay.html
@@ -26,11 +26,11 @@
                 <div class="overlay_form__content">
                     <div class="overlay_content__title">
                         <p class="overlay__primaryTitle">Select Artillery Type</p>
-                        <p class="overlay__secondTitle" id="Arty_type_radio_subtitle">Nothing selected</p>
+                        <p class="overlay__secondTitle" id="Arty_type_radio_subtitle">Field artillery</p>
                     </div>
                     <div class="artillery_type_radio">
                         <div class="type_single_radio" >
-                            <input type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
+                            <input checked type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
                             <label for="Fieldartillery">
                                 <img src="../assets/images/Field_Artillery.png">
                             </label>
@@ -60,8 +60,8 @@
                             <p class="overlay__primaryTitle">To Enemy Position</p>
                         </div>
                         <div class="overlay_textboxes">
-                            <input type="number" placeholder="Enemy Distance" />
-                            <input type="number" placeholder="Enemy Azimuth">
+                            <input id="enemyDistance" type="number" placeholder="Enemy Distance" />
+                            <input id="enemyAzimuth" type="number" placeholder="Enemy Azimuth">
                         </div>
                     </div>
                     <div class="overlay_textboxes_content">
@@ -69,8 +69,8 @@
                             <p class="overlay__primaryTitle">To Friendly Artillery</p>
                         </div>
                         <div class="overlay_textboxes">
-                            <input type="number" placeholder="Friendly Distance" />
-                            <input type="number" placeholder="Friendly Azimuth">
+                            <input id="friendlyDistance" type="number" placeholder="Friendly Distance" />
+                            <input id="friendlyAzimuth" type="number" placeholder="Friendly Azimuth">
                         </div>
                     </div>
                     <div class="hr margin-top20"></div>
