add default text for result coord labels

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -82,11 +82,11 @@
                         <div class="result_coordinates__contents">
                             <div class="coordinate_box">
                                 <p class="overlay__primaryTitle" style="color:#737373;font-weight: bold">DISTANCE</p>
-                                <p class="overlay__primaryNumber">124<span>m</span></p>
+                                <p class="overlay__primaryNumber">NaN<span>m</span></p>
                             </div>
                             <div class="coordinate_box" style="margin-right: auto;">
                                 <p class="overlay__primaryTitle" style="color:#737373;font-weight: bold">AZIMUTH</p>
-                                <p class="overlay__primaryNumber">45<span>deg</span></p>
+                                <p class="overlay__primaryNumber">NaN<span>°</span></p>
                             </div>
                             <div class="result_coordinates__copy">
                                 <img src="../assets/images/copy-content.svg" />
