add correctCoords for Fa and Howi and Gunboat

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="artillery_type_radio">
                         <div class="type_single_radio" >
-                            <input checked type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
+                            <input  type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
                             <label for="Fieldartillery">
                                 <img src="../assets/images/Field_Artillery.png">
                             </label>
@@ -42,7 +42,7 @@
                             </label>
                         </div>
                         <div class="type_single_radio" >
-                            <input type="radio" id="Howitzer" name="arty_type" value="Howitzer">
+                            <input checked type="radio" id="Howitzer" name="arty_type" value="Howitzer">
                             <label for="Howitzer">
                                 <img src="../assets/images/Howitzer_kit.png">
                             </label>
