add mortar to correctcoords function

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -42,13 +42,13 @@
                             </label>
                         </div>
                         <div class="type_single_radio" >
-                            <input checked type="radio" id="Howitzer" name="arty_type" value="Howitzer">
+                            <input  type="radio" id="Howitzer" name="arty_type" value="Howitzer">
                             <label for="Howitzer">
                                 <img src="../assets/images/Howitzer_kit.png">
                             </label>
                         </div>
                         <div class="type_single_radio" >
-                            <input type="radio" id="Mortar" name="arty_type" value="Mortar">
+                            <input checked type="radio" id="Mortar" name="arty_type" value="Mortar">
                             <label for="Mortar">
                                 <img src="../assets/images/Mortar.png">
                             </label>
