add happyHuntin message when there is RangeError

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -77,7 +77,7 @@
                     <div class="result_coordinates">
                         <div class="overlay_content__title">
                             <p class="overlay__primaryTitle">Enemy Coordinates</p>
-                            <p id="error_label" class="overlay__secondTitle" style="color: #ff4848;">Howitzer selected</p>
+                            <p id="error_label" class="overlay__secondTitle red_color">Howitzer selected</p>
                         </div>
                         <div class="result_coordinates__contents">
                             <div class="coordinate_box">
