--- a/src/overlay.html
+++ b/src/overlay.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="artillery_type_radio">
                         <div class="type_single_radio" >
-                            <input  type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
+                            <input checked type="radio" id="Fieldartillery" name="arty_type" value="Field artillery">
                             <label for="Fieldartillery">
                                 <img src="../assets/images/Field_Artillery.png">
                             </label>
@@ -48,7 +48,7 @@
                             </label>
                         </div>
                         <div class="type_single_radio" >
-                            <input checked type="radio" id="Mortar" name="arty_type" value="Mortar">
+                            <input type="radio" id="Mortar" name="arty_type" value="Mortar">
                             <label for="Mortar">
                                 <img src="../assets/images/Mortar.png">
                             </label>
