add clipboard to the overlay

--- a/src/overlay.html
+++ b/src/overlay.html
@@ -89,7 +89,7 @@
                                 <p class="overlay__primaryNumber" id="azimuthLabel">NaN</p>
                             </div>
                             <div class="result_coordinates__copy">
-                                <img src="../assets/images/copy-content.svg" />
+                                <img src="../assets/images/copy-content.svg" title="Copy to clipboard" id="clipBoardBtn"/>
                             </div>
                         </div>
                     </div>
