add custom overlay style

--- a/src/landing.html
+++ b/src/landing.html
@@ -62,6 +62,20 @@
 
     </div>
 
+    <!-- modal menu -->
+    <div class="modal-bg">
+        <div class="modal">
+            <p class="modal-header">Are you sure you want to quit?</p>
+            <p class="modal-subtitle">quit the app</p>
+
+            <!-- btns -->
+            <div class="buttons">
+                <button class="button button-black">CANCEL</button>
+                <button class="button button-red">YES</button>
+            </div>
+        </div>
+    </div>
+
     <script src="landing.js"></script>
     <script src="menuHandler.js"></script>
 </body>
