add funcs to modal menu

--- a/src/landing.html
+++ b/src/landing.html
@@ -70,8 +70,8 @@
 
             <!-- btns -->
             <div class="buttons">
-                <button class="button button-black">CANCEL</button>
-                <button class="button button-red">YES</button>
+                <button class="button button-black" id="ModalCancel">CANCEL</button>
+                <button class="button button-red" id="AppClose">YES</button>
             </div>
         </div>
     </div>
