--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=irxeniac.github.io/GithubPage/index.html">
+<meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html" />
