--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html" />
+<meta http-equiv="refresh" content="0; url=https://google.com" />
