add suggested label to download webpage

--- a/GithubPage/index.html
+++ b/GithubPage/index.html
@@ -15,6 +15,7 @@
             <div class="box download">
                 <h3 class="text_header">Download latest app:</h3>
                 <div class="buttons">
+                    <span class="Suggested_text">SUGGESTED</span>
                     <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/v1.0.0/FoxholeArtillery_portable.exe" class="button">
                         <p class="text_button">FoxholeArtillery_portable.exe
 </p>
