--- a/GithubPage/index.html
+++ b/GithubPage/index.html
@@ -17,12 +17,12 @@
                 <div class="buttons">
                     <span class="Suggested_text">SUGGESTED</span>
                     <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/v1.0.0/FoxholeArtillery_portable.exe" class="button">
-                        <p class="text_button">FoxholeArtillery_portable.exe
+                        <p class="text_button">Foxhole Artillery Portable
 </p>
                         <span class="text_fileSize">41.7mb</span>
                     </a>
                     <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/v1.0.0/FoxholeArtillery_Setup.exe" class="button">
-                        <p class="text_button">FoxholeArtillery_Setup.exe
+                        <p class="text_button">Foxhole Artillery Installer
 
                         </p>
                         <span class="text_fileSize">46.4mb</span>
