add xeniac's copyright

--- a/src/landing.html
+++ b/src/landing.html
@@ -55,6 +55,12 @@
                         <div class="icon-box icon-box--red" id="githubBtn">
                             <img src="../assets/images/github-logo.svg" title="github">
                         </div>
+                        <div class="copyright-container">
+                            <p>Developed by ❤️ Xeniac</p>
+                            <div class="xeniac_logo">
+                                <img src="../assets/images/xeniac logo.png">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
