update download page

--- a/GithubPage/index.html
+++ b/GithubPage/index.html
@@ -10,22 +10,22 @@
 <body>
     <div class="container">
         <h1 class="header">Foxhole Artillery</h1>
-        <p class="version">current version: 1.0.0</p>
+        <p class="version">current version: 1.0.1</p>
         <main class="content">
             <div class="box download">
                 <h3 class="text_header">Download latest app:</h3>
                 <div class="buttons">
                     <span class="Suggested_text">SUGGESTED</span>
-                    <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/v1.0.0/FoxholeArtillery_portable.exe" class="button">
+                    <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/1.0.1/FoxholeArtillery_portable.exe" class="button">
                         <p class="text_button">Foxhole Artillery Portable
 </p>
-                        <span class="text_fileSize">41.7mb</span>
+                        <span class="text_fileSize">42.6mb</span>
                     </a>
-                    <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/v1.0.0/FoxholeArtillery_Setup.exe" class="button">
+                    <a href="https://github.com/irxeniac/FoxholeArtillery-Windows/releases/download/1.0.1/foxholeartillery.Setup.1.0.1.exe" class="button">
                         <p class="text_button">Foxhole Artillery Installer
 
                         </p>
-                        <span class="text_fileSize">46.4mb</span>
+                        <span class="text_fileSize">48.6mb</span>
                     </a>
                 </div>
             </div>
